# Orc-Torrent

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  GITHUB_PUBLISH.md  LICENSE  README.md
.github/workflows/: build-release.yml
Install-Instructions/: Linux.md  README.md  Windows.md  macOS.md
crates/: Cargo.toml
crates/librqbit-patched/src/: api.rs
crates/orc-core/: Cargo.toml
crates/orc-core/src/: lib.rs
crates/orc-daemon/: Cargo.toml
crates/orc-daemon/src/: config.rs  main.rs
docs/: CODEBASE_OVERVIEW.md
ui/desktop/: index.html  package-lock.json  package.json  splash.html  tsconfig.base.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts
ui/desktop/assets/: README.md
ui/desktop/installer/: README.md  README_INSTALLER.md  SILENT_INSTALLATION.md  custom-install.nsh  firewall.nsh  install-logging.nsh  installer-options.nsh  installer.nsh  terminate-processes.nsh  uninstaller.nsh  upgrade.nsh  verification.nsh
ui/desktop/scripts/: build.ts  create-icon.ps1  dev.ts  dist.ts  find-locker.ps1  fix-locks.ps1  kill-cursor-locks.ps1  resize-icon.ps1  tsconfig.json
ui/desktop/src/main/: main.ts
ui/desktop/src/preload/: preload.ts
ui/desktop/src/renderer/: main.tsx  vite-env.d.ts
ui/desktop/src/renderer/components/: AddTorrent.tsx  BootGate.tsx  DaemonControl.tsx  DaemonHealthLed.tsx  DropZone.tsx  ErrorBoundary.tsx  EventsPage.tsx  FileSelectionDialog.tsx  Header.tsx  LogViewer.tsx  Modal.tsx  NetworkPage.tsx  NetworkPosture.tsx  NotificationSoundSettings.tsx  PrivacyKillSwitchDrawer.tsx  SecuritySettings.tsx  SkeletonLoader.tsx  Spinner.tsx  Toast.tsx  TorStatusLed.tsx  TorrentDetails.tsx  TorrentList.tsx  VpnStatusLed.tsx  index.ts
ui/desktop/src/renderer/components/inspector/: EventsTab.tsx  FilesTab.tsx  OverviewTab.tsx  PeersTab.tsx  (+7 more)
ui/desktop/src/renderer/lib/: infoHash.ts
ui/desktop/src/renderer/types/: index.ts  policy.ts
ui/desktop/src/renderer/ui/: App.tsx  styles.css
ui/desktop/src/renderer/utils/: api.ts  country.ts  errorHandling.ts  eventService.ts  format.ts  index.ts  keyboard.ts  logger.ts  notifications.ts  pieceVisualization.ts  torrentCache.ts  torrentFetcher.ts  useAsyncOperation.ts  useDebounce.ts  useEmaEta.ts  usePolicy.ts  useTorrentOperations.ts  useVpnMonitoring.ts
(+21 files in other folders)
